--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <body>
     <h1>NEW! Kitten Mittons!!</h1>
     <p>
-      Cloth footwear for cats. The goal is to make them quieter
-      when they walk around
+      Cloth footwear for cats. The goal is to make them quieter when they walk around. Aren't they cool?
     </p>
   </body>
 </html>
