--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <p>
       Cloth footwear for cats. The goal is to make them quieter when they walk around. Aren't they cool?
     </p>
+    <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg"/>
   </body>
 </html>
