--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <body>
     <h1>NEW! Kitten Mittons!!</h1>
     <p>
-      Cloth footwear for cats. The goal is to make them quieter when they walk around. Aren't they cool?
+      Cloth footwear for cats. The goal is to make them quieter when they walk around. Aren't they cool? Where else would you see anything like this?
     </p>
-    <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg"/>
-  </body>
 </html>
