--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <link rel="stylesheet" href="index.css"> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e-ORhEE9VVg" frameborder="0" allowfullscreen></iframe>
+
 <!doctype html>
 <html>
   <head>
     <title>Website for Kittens</title>
   </head>
   <body>
-    <h1>Kitten Mittens!!</h1>
-    <p> Cloth footwear for cats. The goal is to make them quieter when they walk around. Aren't they cool? Where else would you see anything like this?
+    <h1>Kitten!!</h1>
+    <p> Daily blog: I have two cats who still think they're kittens. They would try to climb 
     </p>
     <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg"/>
     </html> 
