--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <p> Daily blog: I have two cats who still think they're kittens. They would try to climb 
     </p>
     <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg"/>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/e-ORhEE9VVg" frameborder="0" allowfullscreen></iframe>
     </html> 
