--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg" style= "width:150px;"/>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/e-ORhEE9VVg" frameborder="0" allowfullscreen></iframe>
       <p>You can check out more cute cat pictures here!</p>
-      <a href="https://www.pinterest.com/search/pins/?q=cats&term_meta%5B%5D=cats%7Ctyped">
+      <a href="https://www.pinterest.com/search/pins/?q=cats&term_meta%5B%5D=cats%7Ctyped"></a>
     </html> 
     
     
