--- a/c1.html
+++ b/c1.html
@@ -3,14 +3,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Website for Kittens</title>
+    <title>Orange Cat</title>
   </head>
   <body>
-    <h1>Kittens!!</h1>
-    <p> Daily blog: I have two cats who still think they're kittens. They would try to climb everything and since they've grown, they weigh so much. 
+    <h1>Yayyyy! You chose the orange cat!!</h1>
+    <p> What comes next? Well, what would a normal person want to do in the presence of a super adorable bundle of joy? Freak out. But then you get hungry. What would you like to eat? 
     </p>
-    <img src="http://www.thetimes.co.uk/tto/multimedia/archive/00309/108787995_309592c.jpg" style= "width:700px;"/>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/e-ORhEE9VVg" frameborder="0" allowfullscreen></iframe>
-      <p>You can check out more cute cat pictures here!</p>
+    <img src="http://upload.wikimedia.org/wikipedia/commons/e/ea/Baked_cheesecake_with_raspberries_and_blueberries.jpg" style= "width:700px;"/>
       <a href="https://www.pinterest.com/search/pins/?q=cats&term_meta%5B%5D=cats%7Ctyped"></a>
     </html> 
+    
+    
