--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1 class="title">Angry Birds</h1>
+            <h1 class="title">Flappy Birds</h1>
         </header>
         <div id="gameDiv" class="game-area"></div>
         <script src="phaser.min.js"></script>
