--- a/Chooseyourownadventure/index1.html
+++ b/Chooseyourownadventure/index1.html
@@ -8,9 +8,9 @@
   <body>
     <h1>You're in a horrible scenario....</h1>
     <p> There are so many cats to choose from, which one do you choose as your lunch companion? And while you're at it, might as well eat something too.</p>
-    <a href="c1.html" class="linkone">Orange Cat</a>
-    <a href="c2.html" class="linktwo">Black Cat</a>
-    <a href="c3.html" class="linkthree">Grey Cat</a>
+    <a href="choice1.html" class="linkone">Orange Cat</a>
+    <a href="choice2.html" class="linktwo">Black Cat</a>
+    <a href="choice3.html" class="linkthree">Grey Cat</a>
       
       <br>
       <br>
