--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>[insert clever title]</title>
+        <title>Flappy Bird</title>
         <link rel="stylesheet" href="game.css">
     </head>
     <body>
