--- a/Chicktech/chicktech.html
+++ b/Chicktech/chicktech.html
@@ -7,4 +7,7 @@
   </head>
   <body>
       <h1>[Insert Clever Header Here]</h1>
+      <p>Na na na na na na. I don't know what to put here...</p>
+      <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSdgtjkeDI_jfMnMIjZW2G-g9GvPwpekJWqe9e5gZMH-nGBzp43"/>
+
   </body>
